<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    tools:context=".activities.Register">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40pt"
        android:layout_marginBottom="10pt"
        android:gravity="top"
        android:text="@string/app_name"
        android:textSize="60sp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:textSize="20sp"
        android:text="@string/emailLabel"/>

    <EditText
        android:id="@+id/emailInput"
        android:layout_width="300dp"
        android:hint="@string/emailHint"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center_horizontal"
        android:textSize="20sp"
        android:text="@string/passwordLabel"/>

    <EditText
        android:id="@+id/passwordInput"
        android:layout_width="300dp"
        android:hint="@string/passwordHint"
        android:layout_height="wrap_content"
        android:inputType="textPassword" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center_horizontal"
        android:textSize="20sp"
        android:text="@string/repeatPasswordLabel"/>

    <EditText
        android:id="@+id/repeatPasswordInput"
        android:layout_width="300dp"
        android:hint="@string/passwordHint"
        android:layout_height="wrap_content"
        android:inputType="textPassword" />

    <Button
        android:layout_marginTop="20dp"
        android:id="@+id/registerButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/registerButton"/>

    <TextView
        android:id="@+id/goToSignInLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/goToSignIn"
        android:textSize="15sp"/>

</LinearLayout>